; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pokey.c_POKEY_Frame.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_pokey.c_POKEY_Frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@POKEY_AUDCTL = common dso_local global i32* null, align 8
@POKEY_POLY9 = common dso_local global i32 0, align 4
@POKEY_POLY9_SIZE = common dso_local global i32 0, align 4
@POKEY_POLY17_SIZE = common dso_local global i32 0, align 4
@random_scanline_counter = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @POKEY_Frame() #0 {
  %1 = load i32*, i32** @POKEY_AUDCTL, align 8
  %2 = getelementptr inbounds i32, i32* %1, i64 0
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @POKEY_POLY9, align 4
  %5 = and i32 %3, %4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = load i32, i32* @POKEY_POLY9_SIZE, align 4
  br label %11

9:                                                ; preds = %0
  %10 = load i32, i32* @POKEY_POLY17_SIZE, align 4
  br label %11

11:                                               ; preds = %9, %7
  %12 = phi i32 [ %8, %7 ], [ %10, %9 ]
  %13 = load i32, i32* @random_scanline_counter, align 4
  %14 = srem i32 %13, %12
  store i32 %14, i32* @random_scanline_counter, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
